--- a/client/templates/html/appBody.html
+++ b/client/templates/html/appBody.html
@@ -16,7 +16,7 @@
               </a>
             </div>
             <div class="collapse navbar-collapse" id="paratweet-navbar-collapse">
-              <ul class="nav navbar-nav navbar-right">
+              <ul class="nav navbar-nav navbar-right pt-color-lt-green">
                 <li>
                   <a class="openModal" href="#" data-modal-template="postFeedbackModal">
                     Feedback
