--- a/client/templates/html/login.html
+++ b/client/templates/html/login.html
@@ -3,14 +3,12 @@
     <div class="pt-login-page">
       <div class="pt-login-block pt-rounded-shadow-box">
         {{> flashMessages}}
-        <h2 class="pt-color-blue">
-          Welcome to Paratweet!
-        </h2>
+        <img src="images/pt-logo-vertical-lockup.png">
         <h4 class="pt-color-blue">
           To get started, we'll need you to sign in with Twitter.
         </h4>
         {{> loginButtons}}
-        <button type="button" class="btn btn-link openModal">
+        <button type="button" class="btn btn-link contactModal">
           Contact
         </button>
       </div>
