--- a/client/templates/html/appBody.html
+++ b/client/templates/html/appBody.html
@@ -12,13 +12,13 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="#">
-                Paratweet
+                <img alt="logo" src="/images/pt-logo-horizontal-lockup.png">
               </a>
             </div>
             <div class="collapse navbar-collapse" id="paratweet-navbar-collapse">
-              <ul class="nav navbar-nav navbar-right pt-color-lt-green">
+              <ul class="nav navbar-nav navbar-right pt-color-green">
                 <li>
-                  <a class="openModal" href="#" data-modal-template="postFeedbackModal">
+                  <a class="feedbackModal" href="#" data-modal-template="postFeedbackModal">
                     Feedback
                   </a>
                 </li>
