--- a/client/templates/html/postTicketModal.html
+++ b/client/templates/html/postTicketModal.html
@@ -35,6 +35,12 @@
             <div class="form-group">
               <label for="ticket-assignee-select" class="control-label">
                 Assignee
+                {{#unless checkIfLoaded}}
+                  <div class="pt-modal-spinner sk-spinner sk-spinner-double-bounce">
+                    <div class="sk-double-bounce1"></div>
+                    <div class="sk-double-bounce2"></div>
+                  </div>
+                {{/unless}}
               </label>
               <select class="form-control" id="ticket-assignee-select">
                 {{#each proUsers}}
