Add kadira, change default banner, move character count for reply

--- a/client/templates/css/global.scss
+++ b/client/templates/css/global.scss
@@ -82,6 +82,10 @@ button.btn-link:focus {
   padding: 0;
 }
 
+#pt-character-count {
+  float: right;
+}
+
 /**
  * Modal styles, overriding bootstrap styles
  */
