--- a/client/templates/html/postReplyModal.html
+++ b/client/templates/html/postReplyModal.html
@@ -16,13 +16,13 @@
               <label for="reply-body" class="control-label">
                 Body
               </label>
-              <textarea class="form-control" id="reply-body"></textarea>
-            </div>
-            <div class="form-group">
               <label class="sr-only">
                 Character Count
               </label>
-              <p>{{remainingCharCount}}</p>
+              <span id="pt-character-count">
+                {{remainingCharCount}} / 140
+              </span>
+              <textarea class="form-control" id="reply-body"></textarea>
             </div>
           </form>
         </div>
