Change min width of login block and change agreement text

--- a/client/templates/css/login.scss
+++ b/client/templates/css/login.scss
@@ -8,6 +8,7 @@
 .pt-login-block {
   background-color: #fff;
   padding: 40px 50px 20px;
+  min-width: 540px;
   position: absolute;
   left: 50%;
   top: 20%;
