--- a/client/templates/html/postContactModal.html
+++ b/client/templates/html/postContactModal.html
@@ -34,7 +34,7 @@
               <div class="checkbox">
                 <label>
                   <input type="checkbox" id="contact-agree">
-                  Agree to be contacted through Email
+                  I agree to be contacted through Email
                 </label>
               </div>
             </div>
