--- a/client/templates/html/postFeedbackModal.html
+++ b/client/templates/html/postFeedbackModal.html
@@ -46,7 +46,7 @@
               <div class="checkbox">
                 <label>
                   <input type="checkbox" id="feedback-agree">
-                  Agree to be contacted through Twitter or Email
+                  I agree to be contacted through Twitter or Email
                 </label>
               </div>
             </div>
