--- a/client/templates/html/appBody.html
+++ b/client/templates/html/appBody.html
@@ -11,7 +11,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="https://community.spiceworks.com/appcenter/app/extension_56" target="_blank" title="Go to Paratweet in the App Center">
                 <img alt="logo" src="/images/pt-logo-horizontal-lockup.png">
               </a>
             </div>
