--- a/client/templates/html/postReplyModal.html
+++ b/client/templates/html/postReplyModal.html
@@ -20,7 +20,7 @@
                 Character Count
               </label>
               <span id="pt-character-count">
-                {{remainingCharCount}} / 140
+                {{remainingCharCount}}
               </span>
               <textarea class="form-control" id="reply-body"></textarea>
             </div>
