Add clarity to timelines on how to pull in latest things

--- a/client/templates/html/twitterMessages.html
+++ b/client/templates/html/twitterMessages.html
@@ -4,7 +4,7 @@
 
   {{#unless messagesNotEmpty}}
     <div class="row pt-empty-collection pt-color-lt-gray">
-      <h4>No Direct Messages to show</h4>
+      <h4>Click "Load New Messages" above to view your latest messages.</h4>
     </div>
   {{/unless}}
 </template>
