--- a/client/templates/html/twitterTimeline.html
+++ b/client/templates/html/twitterTimeline.html
@@ -4,7 +4,7 @@
 
   {{#unless tweetsNotEmpty}}
     <div class="row pt-empty-collection pt-color-lt-gray">
-      <h4>No Mentions to show</h4>
+      <h4>Click "Load New Mentions" above to view your latest mentions.</h4>
     </div>
   {{/unless}}
 </template>
