Add ability to get full message text and link to messages

--- a/client/templates/html/message.html
+++ b/client/templates/html/message.html
@@ -41,8 +41,8 @@
           <img class="svg tooltipped" src="/images/reply.svg" alt="Reply" data-toggle="tooltip" data-placement="top" title="Reply">
         </a>
       </div>
-      <a href="https://twitter.com/{{content.recipient.screen_name}}" class="twitter-logo pull-right" target="_blank">
-        <img class="tooltipped" src="/images/Twitter_logo_blue_32.png" alt="Twitter Logo" data-toggle="tooltip" data-placement="left" title="Go to Twitter">
+      <a href="https://twitter.com/messages" class="twitter-logo pull-right" target="_blank">
+        <img class="tooltipped" src="/images/Twitter_logo_blue_32.png" alt="Twitter Logo" data-toggle="tooltip" data-placement="left" title="Go to Messages">
       </a>
       {{#with existingTicket}}
         <div class="pt-ticket-message">
